# euclid-wiki

./: .env  Cargo.toml  README.md
assets/styles/: main.css
assets/templates/: base.handlebars  edit.handlebars  not-found.handlebars  page.handlebars
crates/euclid/: Cargo.toml  build.rs
crates/euclid/migrations/: 0001_create_users_table.up.sql  0002_create_content_table.up.sql  0003_create_revisions_table.up.sql  0004_create_pages_table.up.sql  0005_alter_revisions_add_pages_fk.down.sql  0005_alter_revisions_add_pages_fk.up.sql
crates/euclid/src/: app.rs  error.rs  lib.rs  main.rs
crates/euclid/src/app/: asset.rs  mod.rs  page.rs  reload.rs
crates/euclid/src/routing/: asset.rs  mod.rs  page.rs  reload.rs  root.rs
