[package]
name = "euclid"
version = "0.1.0"
authors = ["Ahraman <ahraman.programming@gmail.com>"]

edition.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "1.0.64"

tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
axum = { version = "0.7.7", features = ["macros"] }

dotenvy = "0.15.7"